# mykiss

./: .gitignore  Makefile.am  README.markdown  README.md  aclocal.m4  configure  configure.ac  run_local.py
data/: Makefile.am  apps.mykiss.gschema.xml  mykiss.desktop  mykiss.desktop.in  org.mykiss-editor.gschema.xml
data/icons/: Makefile.am  make_icons.py
data/icons/hicolor/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
data/icons/scalable/: Makefile.am
data/ui/: Makefile.am  menu_and_toolbar.ui  plugin_manager.ui
po/: POTFILES.in
src/: Makefile.am  mykiss  mykiss.in
src/plugins/: Makefile.am  doclist.plugin  documentlist.plugin  examples.plugin  filebrowser.plugin  minimal.plugin  pluginmanager.plugin  terminal.mykiss-plugin  terminal.plugin
src/plugins/doclist/: __init__.py  doclist.py
src/plugins/documentlist/: __init__.py  documentlist.py
src/plugins/examples/: __init__.py
src/plugins/filebrowser/: __init__.py  filebrowser.py
src/plugins/terminal/: __init__.py  terminal.py
